feat(product): add product on store endpoints